# v4l2loopback_cpp

./: CMakeLists.txt  README.md  simpleopen.cpp  v4l2sink.cpp  v4l2sink.hpp  v4l2sinktest.cpp
